# scoring-machine

./: CMakeLists.txt  Epee.cpp  Epee.h  Foil.cpp  Foil.h  README.md  Saber.cpp  Saber.h  config.h  main_loop.cpp  side.cpp  side.h  weapon_select.cpp  weapon_select.h
blink_example/: CMakeLists.txt  blink.cpp
buzzbox/: CMakeLists.txt  buzzbox_main.cpp
common/: side.cpp
scoring_machine/: CMakeLists.txt  main_loop.cpp
